poc checkpoint - includes code that may be removed in the near future.

--- a/public/indexJoinGame.html
+++ b/public/indexJoinGame.html
@@ -9,7 +9,12 @@
 </head>
 
 <body>
-  <div id="content"></div>
+  <div 
+    id="content"
+    data-user="joel"
+    data-boardid="632d1f50-0f82-404e-8058-4f3079e4b511"
+  >
+  </div>
 </body>
 <script src="./build/bundle.js"></script>
 
